--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
 # Optimización y cálculo numérico
-numpy==1.26.2
-scipy==1.11.4
-pymoo==0.6.1.1
+numpy
+scipy=
+pymoo
 
 # Visualización
-matplotlib==3.8.2
-plotly==5.18.0
-imageio==2.33.0
-kaleido==0.2.1
+matplotlib
+plotly
+imagei
+kaleido
 
 # Procesamiento de datos y utilidades
-pandas==2.1.3
-tqdm==4.66.1
+pandas
+tqdm
 
 # Visualización web
-streamlit==1.29.0
+streamlit
 
 # Exportación y generación de GIFs
-Pillow==10.1.0
+Pillow
